--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -54,19 +54,12 @@ jobs:
         with:
           name: halide_riscv
 
-  #     - name: Synchronize test data
-  #       run: |
-  #         cd $HOME/opencv_extra
-  #         git pull origin HEAD
-  #         cd testdata/dnn
-  #         python download_models.py
+      - name: Run tests
+        run: |
+          chmod +x test_algo
+          ./test_algo
 
-  #     # Type "ulimit -s unlimited" to solve "Resource temporarily unavailable"
-  #     - name: Run tests
-  #       run: |
-  #         export OPENCV_TEST_DATA_PATH=$HOME/opencv_extra/testdata
-  #         export OPENCV_DNN_TEST_DATA_PATH=$HOME/opencv_extra/testdata
-  #         source openvino_debian10_armhf/bin/setupvars.sh
-  #         cd opencv/build
-  #         ulimit -s unlimited
-  #         ./bin/opencv_test_dnn --gtest_param_filter=*MYRIAD*
+      - name: Run perf tests
+        run: |
+          chmod +x perf_algo
+          ./perf_algo
