--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -57,9 +57,11 @@ jobs:
       - name: Run tests
         run: |
           chmod +x test_algo
+          export LD_LIBRARY_PATH=./:./opencv-prefix/src/opencv-build/lib:$LD_LIBRARY_PATH
           ./test_algo
 
       - name: Run perf tests
         run: |
           chmod +x perf_algo
+          export LD_LIBRARY_PATH=./:./opencv-prefix/src/opencv-build/lib:$LD_LIBRARY_PATH
           ./perf_algo
