Disable dnn for faster build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,7 @@ ExternalProject_Add(opencv
     "-DCMAKE_BUILD_TYPE=Release"
     "-DCMAKE_INSTALL_PREFIX=<BINARY_DIR>/install/"
     ${CROSS_COMPILE_FLAGS}
-    "-DBUILD_LIST=ts,core,imgproc,dnn"
+    "-DBUILD_LIST=ts,core,imgproc"
     "-DWITH_WEBP=OFF"
     "-DWITH_ZLIB=OFF"
     "-DWITH_OPENEXR=OFF"
