--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -86,7 +86,7 @@ jobs:
       run: |
         python3 -m pip install --upgrade pip
         python3 -m pip install gdown
-        gdown https://drive.google.com/1tCgUEbdlLLad-ThZ5PO9gJyy9X5DCaUT
+        gdown https://drive.google.com/uc?id=1tCgUEbdlLLad-ThZ5PO9gJyy9X5DCaUT
         tar -xf test_data.tar.gz
 
       - name: Run tests
