--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -100,3 +100,10 @@ jobs:
           chmod +x perf_algo
           export LD_LIBRARY_PATH=./:./opencv-prefix/src/opencv-build/lib:$LD_LIBRARY_PATH
           ./perf_algo
+
+      - name: Upload binaries
+        uses: actions/upload-artifact@v4
+        with:
+          name: images
+          path: |
+            res_cat_ascii_halide.png
