--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -95,15 +95,16 @@ jobs:
           export LD_LIBRARY_PATH=./:./opencv-prefix/src/opencv-build/lib:$LD_LIBRARY_PATH
           ./test_algo
 
-      - name: Run perf tests
-        run: |
-          chmod +x perf_algo
-          export LD_LIBRARY_PATH=./:./opencv-prefix/src/opencv-build/lib:$LD_LIBRARY_PATH
-          ./perf_algo
-
       - name: Upload binaries
         uses: actions/upload-artifact@v4
         with:
           name: images
           path: |
-            res_cat_ascii_halide.png
+            *.png
+            *.jpg
+
+      - name: Run perf tests
+        run: |
+          chmod +x perf_algo
+          export LD_LIBRARY_PATH=./:./opencv-prefix/src/opencv-build/lib:$LD_LIBRARY_PATH
+          ./perf_algo
