HDR and mertens algorithm. Part 2 - Mertens algorithm  (#27)
* Part 1. LaplacianFilter

* Part 1. LaplacianFilter

* Part 1. LaplacianFilter

* Part 2. Mertens Algorithm

* Part 2. Mertens Algorithm(fixed)

* RISC-V support code

* Add risc-v support (fixed)

* RISC-V with vectorization

* Created test for hdr task

* Rename perf_hdd.cpp to perf_hdr.cpp

* Remove main

* Update test.yaml

* Update test.yaml

* Temporarly disable vectors

* Code style

---------

Co-authored-by: Dmitry Kurtaev <dmitry.kurtaev@gmail.com>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -39,6 +39,14 @@ jobs:
 
         make -j$(nproc --all)
 
+    - name: Download test data
+      run: |
+        cd build
+        python3 -m pip install --upgrade pip
+        python3 -m pip install gdown
+        gdown https://drive.google.com/uc?id=1tCgUEbdlLLad-ThZ5PO9gJyy9X5DCaUT
+        tar -xf test_data.tar.gz
+
     - name: Generate code
       run: |
         export LD_LIBRARY_PATH=${{ github.workspace }}/halide-install/lib:$LD_LIBRARY_PATH
