add variants of idw_halide and minor bugfixes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
         "iostream": "cpp",
         "cmath": "cpp",
         "optional": "cpp",
-        "new": "cpp"
+        "new": "cpp",
+        "ostream": "cpp",
+        "numbers": "cpp"
     }
 }
